Mess with Hammer events and Paper drawing

--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <title>Boardico</title>
     <link rel="stylesheet" type="text/css" href="/src/css/reset.css">
     <link rel="stylesheet" type="text/css" href="/src/css/main.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-			      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-			      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-touch-events/1.0.5/jquery.mobile-events.js"></script>
     <script src="./bootstrap.js"></script>
-    <script src="/src/js/events.js"></script>
   </head>
   <body>
     <div id="top_container">
@@ -18,7 +14,7 @@
         not working
       </div>
     </div>
-    <canvas id="board">hello</canvas>
+    <canvas id="board" resize></canvas>
     <div id="event_overlay"></div>
   </body>
 </html>
