Draw the beginning of the board

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,10 @@
         not working
       </div>
     </div>
+    <div id="left_container" class="hide">
+      <div id="event_log"></div>
+      <button id="left_hide">></button>
+    </div>
     <canvas id="board" resize></canvas>
     <div id="event_overlay"></div>
   </body>
